Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,4 +1,19 @@
 # Maven
+- task: AIPullRequestReview@0
+  inputs:
+    api_key: 'c24f4cf87f4a442aa144cfcf9e341c7b'
+    model: 'gpt-4'
+    aoi_endpoint: 'https://pullreqest.openai.azure.com/'
+    support_self_signed_certificate: true
+    ai_instructions: |
+      Act as a code reviewer of a Pull Request, providing feedback on possible bugs and clean code issues.
+      You are provided with the Pull Request changes in a patch format.
+      Each patch entry has the commit message in the Subject line followed by the code changes (diffs) in a unidiff format.
+      
+      As a code reviewer, your task is:
+      - Review only added, edited or deleted lines.
+      - If there's no bugs and the changes are correct, write only 'No feedback.'
+      - If there's bug or incorrect code changes, don't write 'No feedback.'
 # Build your Java project and run tests with Apache Maven.
 # Add steps that analyze code, save build artifacts, deploy, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/java
